# corsadata

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  supabase.py
backend/middleware/: auth.py  permissions.py  quota.py  rate_limit.py
backend/models/: common.py  schemas.py
backend/routers/: analysis.py  billing.py  dashboard.py  exports.py  health.py  performance.py  races.py  riders.py  stages.py  teams.py  waypoints.py
backend/services/: csv_importer.py  export_gpx.py  export_pdf.py  gpx_analyzer.py  job_manager.py  surface.py  weather.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/forgot-password/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/analysis/: AnalysisParams.tsx  MapView.tsx  ProfileChart.tsx  ProgressOverlay.tsx  RoadbookPanel.tsx  StageLibrary.tsx  StatsPanel.tsx  WaypointPanel.tsx
frontend/components/layout/: LogoutButton.tsx
frontend/lib/: api.ts
frontend/lib/hooks/: usePermissions.ts
frontend/lib/stores/: analysis-store.ts
frontend/lib/supabase/: middleware.ts  server.ts
frontend/types/: analysis.ts  database.ts
migracion/: index.html
prd/: prd_corsadata.md
supabase/: config.toml  seed.sql
supabase/migrations/: 00001_initial_schema.sql  00002_rls_policies.sql  00003_storage_buckets.sql
(+10 files in other folders)
